# github-actions

.github/actions/setup-pixi-lock/: action.yml
.github/workflows/: test-actions.yml  test-mkdocs-deploy.yml  test-python-setup-pip.yml  test-python-setup-pixi.yml  test-python-setup-uv.yml  test-release-github.yml
.github/workflows/test-helpers/setup-fake-remote/: action.yml
actions/mkdocs-deploy/: README.md  action.yml
actions/python-setup/pip/: README.md  action.yml
actions/python-setup/pixi/: README.md  action.yml
actions/python-setup/uv/: README.md  action.yml
actions/release/github/: action.yml
develop/: 404.html  index.html
develop/VERSIONING/: index.html
develop/pytho-setup/pip/: index.html
develop/pytho-setup/pixi/: index.html
develop/pytho-setup/uv/: index.html
develop/search/: search_index.json
docs/: VERSIONING.md  python-setup-pip.md
docs/pytho-setup/: pip.md  pixi.md  uv.md
docs/python-setup/: uv.md
docs/release/github/: EXAMPLES.md  README.md
scripts/: generate-pixi-lock-files.py
tests/data/mkdocs-deploy/: .gitignore  MIGRATION-SUMMARY.md  QUICK-REFERENCE.md  README.md  TEST-COVERAGE.md  generate-pixi-locks.py
tests/data/mkdocs-deploy/test-custom-configuration/: mkdocs.yml  pyproject.toml
tests/data/mkdocs-deploy/test-custom-configuration/docs/: index.md
tests/data/mkdocs-deploy/test-error-no-docs-deps/: pyproject.toml
tests/data/mkdocs-deploy/test-git-configuration/: mkdocs.yml  pyproject.toml
tests/data/mkdocs-deploy/test-main-trigger/: mkdocs.yml  pyproject.toml
tests/data/mkdocs-deploy/test-main-trigger/docs/: about.md  index.md
tests/data/mkdocs-deploy/test-package-manager-commands/: mkdocs.yml  pyproject.toml
tests/data/mkdocs-deploy/test-pull-request-pip-uv/: mkdocs.yml  pyproject.toml
tests/data/mkdocs-deploy/test-pull-request-pixi/: pyproject.toml
tests/data/mkdocs-deploy/test-pull-request-pixi/docs/: index.md
tests/data/mkdocs-deploy/test-release-tag-resolution/: mkdocs.yml  pyproject.toml
tests/data/mkdocs-deploy/test-release-trigger-pip-uv/: mkdocs.yml  pyproject.toml
tests/data/mkdocs-deploy/test-release-trigger-pip-uv/docs/: index.md  release.md
tests/data/mkdocs-deploy/test-release-trigger-pixi/: pyproject.toml
tests/data/pip/test-pip-all-combinations/: pyproject.toml
tests/data/pip/test-pip-architecture/: pyproject.toml
tests/data/pip/test-pip-cache/: pyproject.toml
tests/data/pip/test-pip-cache-with-requirements/: requirements.txt
tests/data/pip/test-pip-dependency-groups-only/: pyproject.toml
tests/data/pip/test-pip-empty-extras-only/: pyproject.toml
tests/data/pip/test-pip-empty-groups-only/: pyproject.toml
tests/data/pip/test-pip-empty-sections/: pyproject.toml
tests/data/pip/test-pip-groups-only-docs/: pyproject.toml
tests/data/pip/test-pip-invalid-format/: pyproject.toml
tests/data/pip/test-pip-matrix/: pyproject.toml
tests/data/pip/test-pip-mixed-groups-and-extras/: pyproject.toml
tests/data/pip/test-pip-multiple-python-versions/: pyproject.toml
tests/data/pip/test-pip-only-dependencies/: pyproject.toml
tests/data/pip/test-pip-optional-dependencies/: pyproject.toml
tests/data/pip/test-pip-single-extra/: pyproject.toml
tests/data/pip/test-pip-single-group/: pyproject.toml
tests/data/pip/test-pip-whitespace-handling/: pyproject.toml
tests/data/pip/test-pip-with-groups/: pyproject.toml
tests/data/pixi/test-pixi-basic/: pyproject.toml
tests/data/pixi/test-pixi-caching-populate/: pyproject.toml
tests/data/pixi/test-pixi-caching-validation/: pyproject.toml
tests/data/pixi/test-pixi-complex-project/: pyproject.toml
tests/data/pixi/test-pixi-default-environment/: pyproject.toml
tests/data/pixi/test-pixi-environment-activation/: pyproject.toml
tests/data/pixi/test-pixi-lock-verification-disabled/: pyproject.toml
tests/data/pixi/test-pixi-lock-verification-outdated/: pyproject.toml
tests/data/pixi/test-pixi-lock-verification-valid/: pyproject.toml
tests/data/pixi/test-pixi-lock-verification-validation/: pyproject.toml
tests/data/pixi/test-pixi-matrix/: pyproject.toml
tests/data/pixi/test-pixi-multiple-environments/: pyproject.toml
tests/data/release-github/test-basic-pip/: pyproject.toml
tests/data/release-github/test-basic-pixi/: pixi.toml  pyproject.toml
tests/data/release-github/test-basic-uv/: pyproject.toml
tests/data/release-github/test-minimal/: pyproject.toml
tests/data/release-github/test-prerelease/: pyproject.toml
tests/data/release-github/test-prerelease/src/test_release_prerelease/: __init__.py
tests/data/release-github/test-with-groups/: pyproject.toml
