[project]
name = "test-commands"
version = "0.1.0"
dependencies = []

[dependency-groups]
docs = [
  "mkdocs>=1.5.0",
  "mike>=2.1.0"
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.docs.dependencies]
mkdocs = ">=1.5.0"
mike = ">=2.1.0"

[tool.pixi.environments]
docs = ["docs"]
