[project]
name = "test-docs"
version = "0.1.0"
dependencies = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.11"

[tool.pixi.feature.docs.dependencies]
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.5.0"
mike = ">=2.1.0"

[tool.pixi.environments]
docs = ["docs"]
