[project]
          name = "multi-env-project"
          version = "0.1.0"
          dependencies = []

          [tool.pixi.workspace]
          channels = ["conda-forge"]
          platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

          [tool.pixi.dependencies]
          python = ">=3.11"

          [tool.pixi.feature.py311.dependencies]
          python = "3.11.*"
          pandas = ">=2.0"

          [tool.pixi.feature.py312.dependencies]
          python = "3.12.*"
          scikit-learn = ">=1.3"

          [tool.pixi.environments]
          py311 = ["py311"]
          py312 = ["py312"]