[project]
          name = "cache-test"
          version = "0.1.0"
          dependencies = []

          [tool.pixi.workspace]
          channels = ["conda-forge"]
          platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

          [tool.pixi.dependencies]
          python = ">=3.11"
          numpy = ">=1.26"
          scipy = ">=1.11"
          matplotlib = ">=3.8"