[project]
          name = "complex-project"
          version = "0.1.0"
          description = "A complex project with multiple features"
          dependencies = []

          [tool.pixi.workspace]
          channels = ["conda-forge", "pytorch"]
          platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

          [tool.pixi.tasks]
          test = "pytest tests/"
          lint = "ruff check ."
          format = "black ."

          [tool.pixi.dependencies]
          python = ">=3.11,<3.13"

          [tool.pixi.feature.core.dependencies]
          numpy = ">=1.26"
          pandas = ">=2.0"
          scipy = ">=1.11"

          [tool.pixi.feature.ml.dependencies]
          scikit-learn = ">=1.3"
          xgboost = ">=2.0"
          pytorch = ">=2.0"

          [tool.pixi.feature.viz.dependencies]
          matplotlib = ">=3.8"
          seaborn = ">=0.13"
          plotly = ">=5.18"

          [tool.pixi.feature.dev.dependencies]
          pytest = ">=7.0"
          pytest-cov = ">=4.0"
          black = ">=23.0"
          ruff = ">=0.1"
          mypy = ">=1.0"

          [tool.pixi.environments]
          default = ["core", "dev"]
          ml = ["core", "ml", "viz", "dev"]
          prod = ["core", "ml"]