[project]
name = "cross-platform-test"
version = "0.1.0"
dependencies = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.11"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
requests = ">=2.31"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
httpx = ">=0.25"

[tool.pixi.environments]
default = []
py311 = ["py311"]
py312 = ["py312"]