[project]
          name = "env-activation-test"
          version = "0.1.0"
          dependencies = []

          [tool.pixi.workspace]
          channels = ["conda-forge"]
          platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

          [tool.pixi.dependencies]
          python = ">=3.11"

          [tool.pixi.feature.prod.dependencies]
          flask = ">=3.0"

          [tool.pixi.feature.dev.dependencies]
          pytest = ">=7.0"
          black = ">=23.0"

          [tool.pixi.environments]
          prod = ["prod"]
          dev = ["dev"]