[project]
name = "test-release-pixi"
version = "0.1.0"
description = "Test project for release action with pixi"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "$version"
update_changelog_on_bump = true
