[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-release-uv"
version = "0.1.0"
description = "Test project for release action with uv"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[dependency-groups]
docs = [
    "mkdocs>=1.5.0",
]
test = [
    "pytest-cov>=4.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "$version"
update_changelog_on_bump = true
