[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-release-uv"
version = "0.1.0"
description = "Test project for release action with uv"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[tool.hatch.build.targets.wheel]
packages = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "commitizen>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
]
test = [
    "pytest-cov>=4.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "$version"
update_changelog_on_bump = true
