[project]
name = "test-release-groups"
version = "0.1.0"
description = "Test project for release with dependency groups"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "commitizen>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
]
test = [
    "pytest-cov>=4.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "$version"
update_changelog_on_bump = true
